Fix preview styling and print legibility

--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,9 @@
 }
 
 .preview-scaler-inner {
+	box-shadow: 0 4px 24px rgba(0, 0, 0, 0.18);
+	max-width: min-content;
+	margin: auto;
 	overflow-x: auto;
 }
 
